<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="363dp"
        android:layout_height="58dp"
        android:layout_marginTop="88dp"
        android:bufferType="normal"
        android:text="@string/textView"
        android:textColor="#19B3A4"
        android:textColorLink="#E40606"
        android:textSize="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/monnaie"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_marginBottom="348dp"
        android:ems="10"
        android:hint="Tapper la somme a convertir"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:shadowColor="#109588"
        android:text="@string/monnaie"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGp"
        android:layout_width="346dp"
        android:layout_height="62dp"
        android:layout_marginTop="296dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/radioButton01" />

        <RadioButton
            android:id="@+id/radioButton02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:drawable/btn_radio"
            android:text="@string/radioButton02" />
    </RadioGroup>

    <TextView
        android:id="@+id/resultat"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:layout_marginBottom="60dp"
        android:background="#009688"
        android:shadowColor="#FFFFFF"
        android:text="@string/resultat"
        android:textColor="#000000"
        android:textColorHighlight="#8C0B91"
        android:textColorHint="#D418DD"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGp"
        app:layout_constraintVertical_bias="0.967" />

    <Button
        android:id="@+id/buttonConversion "
        android:layout_width="133dp"
        android:layout_height="51dp"
        android:layout_marginBottom="136dp"
        android:background="#009688"
        android:text="@string/bConversion"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>